# qskinny-vcpkg-example

./: CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
vcpkg-overlays/qskinny/: portfile.cmake  vcpkg.json
